--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -46,5 +46,12 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
+        <div>
+            <label>
+                <input type="radio" name="white" value="white">White<br>
+                <input type="radio" name="black" value="black">Black
+            </label>
+
+        </div>
     </div>
 </nav>
