--- a/src/main/resources/templates/greetings.mustache
+++ b/src/main/resources/templates/greetings.mustache
@@ -2,7 +2,6 @@
 
     <!--content-->
     <div class="bg-dark text-white p-5">
-        <h1>{{username}}님, 반갑습니다.</h1>
+        <h1 id="welcome-text">{{userName}}님, 반갑습니다.</h1>
     </div>
-
 {{>layouts/footer}}
