member registration practice using h2 DB

--- a/src/main/resources/templates/greetings.mustache
+++ b/src/main/resources/templates/greetings.mustache
@@ -2,6 +2,10 @@
 
     <!--content-->
     <div class="bg-dark text-white p-5">
-        <h1 id="welcome-text">{{userName}}님, 반갑습니다.</h1>
+        <h1 id="welcome-text"> 임시 index페이지</h1>
+        <p>
+            <a href="/members/memberList">회원목록</a>
+            <a href="/members/new">회원가입</a>
+        </p>
     </div>
 {{>layouts/footer}}
