--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -1,6 +1,6 @@
 {{>layouts/header}}
 
-<form class="container" action="/articles/create" method="post">
+<form class="container" action="/articles/new" method="post">
     <div class="mb-3">
         <label class="form-label">제목</label>
         <input type="text" class="form-control" name="title">
