--- a/src/main/resources/templates/articles/new.html
+++ b/src/main/resources/templates/articles/new.html
@@ -1,4 +1,7 @@
-{{>layouts/header}}
+<!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
+<th:block th:replace="layouts/header::header"></th:block>
 
 <form class="container" action="/articles/new" method="post">
     <div class="mb-3">
@@ -13,4 +16,5 @@
     <button type="submit" class="btn btn-primary">제출</button>
 </form>
 
-{{>layouts/footer}}
+<th:block th:replace="layouts/footer::footer"></th:block>
+</html>
