--- a/src/main/resources/templates/greetings.html
+++ b/src/main/resources/templates/greetings.html
@@ -1,5 +1,7 @@
-{{>layouts/header}}
+<!DOCTYPE html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
+<th:block th:replace="layouts/header::header"></th:block>
     <!--content-->
     <div class="bg-dark text-white p-5">
         <h1 id="welcome-text"> 임시 index페이지</h1>
@@ -8,4 +10,6 @@
             <a href="/members/new">회원가입</a>
         </p>
     </div>
-{{>layouts/footer}}
+
+<th:block th:replace="layouts/footer::footer"></th:block>
+</html>
