--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<th:block th:fragment="header">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -55,3 +56,5 @@
         </div>
     </div>
 </nav>
+</th:block>
+</html>
