--- a/src/main/resources/templates/greetings.html
+++ b/src/main/resources/templates/greetings.html
@@ -7,7 +7,8 @@
         <h1 id="welcome-text"> 임시 index페이지</h1>
         <p>
             <a href="/members/memberList">회원목록</a>
-            <a href="/members/new">회원가입</a>
+            <a href="/members/new">회원가입</a><br>
+            <a href="/articles/list">글 목록</a>
         </p>
     </div>
 
