Modify the path to load finance.js file

--- a/src/main/resources/templates/finance/showFinance.html
+++ b/src/main/resources/templates/finance/showFinance.html
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-            <script src="finance.js"></script>
+            <script src="assets/js/finance.js"></script>
         </tbody>
     </table>
 </body>
