modify list, new.html

--- a/src/main/resources/templates/articles/list.html
+++ b/src/main/resources/templates/articles/list.html
@@ -9,9 +9,12 @@
         </div>
 
         <div class="inner">
-            <div align="right">
-                <a href="/articles/new">글 쓰기</a>
+            <div align="right" style="margin-top: 20px;">
+                <form action="/articles/new">
+                    <button type="submit">게시글 등록</button>
+                </form>
             </div>
+
 
             <!-- 게시물 -->
             <div id="board-table">
