--- a/src/main/resources/templates/articles/new.html
+++ b/src/main/resources/templates/articles/new.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<th:block th:replace="layouts/header::header"></th:block>
+<th:block th:replace="layouts/index_header::index_header"></th:block>
 
-<form class="container" action="/articles/new" method="post">
-    <div class="mb-3">
-        <label class="form-label">제목</label>
-        <input type="text" class="form-control" name="title">
+<div id="content">
+    <div>
+        <form class="container" action="/articles/new" method="post">
+            <div class="mb-3">
+                <label>제목</label>
+                <input type="text" name="title">
+            </div>
+
+            <div class="mb-3">
+                <label>내용</label>
+                <textarea rows="20" name="content"></textarea>
+            </div>
+            <div align="right" style="margin-top: 10px;">
+                <button type="submit">등록</button>
+            </div>
+        </form>
     </div>
+</div>
 
-    <div class="mb-3">
-        <label class="form-label">내용</label>
-        <textarea class="form-control" rows="3" name="content"></textarea>
-    </div>
-    <button type="submit" class="btn btn-primary">제출</button>
-</form>
-
-<th:block th:replace="layouts/footer::footer"></th:block>
+<th:block th:replace="layouts/index_footer::index_footer"></th:block>
 </html>
